[workspace]
resolver = "2"
members = ["rport-server", "rport", "rport-common"]

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
webrtc = "0.13.0"
portable-pty = "0.9.0"
pty-process = { version = "0.5.3", features = ["async"] }
bytes = "1.0"
nix = "0.30.1"
